Fixed horizontal spacing on smaller screens

--- a/assets/styles/components/page.css
+++ b/assets/styles/components/page.css
@@ -7,6 +7,11 @@ body {
   padding: var(--space-2);
   margin-bottom: var(--space-9);
 
+  @media (max-width: 650px) {
+    padding: var(--space-3) var(--space-5);
+    margin-bottom: var(--space-5);
+  }
+
   display: grid;
   grid-auto-flow: column;
   grid-template:
